--- a/A2/Q4.ipynb
+++ b/A2/Q4.ipynb
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,30 +371,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 84,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "train end\n",
-      "GCC Classifier Accuracy: 0.0022471910112359553\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Calculate priors, class statistics\n",
     "priors = calculate_priors(y_train)\n",
     "class_means,  invcovs = calculate_class_statistics(X_train_features, y_train)\n",
-    "print(\"train end\")\n",
     "\n",
     "# Predict on test set\n",
     "X_test_predictions = gcc_classify(X_test_features, class_means, invcovs, priors) \n",
-    "# Evaluate the classifier\n",
     "\n",
-    "accuracy = np.mean(X_test_predictions == y_test)\n",
-    "print(\"GCC Classifier Accuracy:\", accuracy)\n"
+    "X_train_predictions = gcc_classify(X_train_features, class_means, invcovs, priors) \n",
+    "\n",
+    "test_accuracy = np.mean(X_test_predictions == y_test)\n",
+    "train_accuracy_accuracy = np.mean(X_train_predictions == y_train)\n",
+    "print(\"Test set GCC Classifier Accuracy:\", test_accuracy)\n",
+    "print(\"Test set GCC Classifier Accuracy:\", train_accuracy)\n"
    ]
   },
   {
@@ -406,40 +399,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[4. 4. 2. 4. 4. 1. 3. 2. 3. 2. 2. 3. 2. 4. 2. 2. 4. 4. 4. 4. 1. 1. 4. 2.\n",
-      " 2. 4. 1. 3. 0. 2. 2. 3. 1. 4. 4. 4. 2. 1. 1. 4. 2. 4. 3. 4. 2. 4. 4. 1.\n",
-      " 3. 4. 2. 4. 2. 4. 1. 3. 1. 0. 4. 4. 2. 1. 3. 3. 0. 1. 2. 4. 2. 4. 1. 3.\n",
-      " 2. 4. 3. 3. 3. 4. 3. 1. 0. 1. 2. 4. 1. 2. 3. 3. 2. 4. 4. 4. 4. 3. 2. 1.\n",
-      " 4. 0. 2. 4. 3. 3. 1. 3. 2. 4. 1. 1. 3. 4. 3. 3. 3. 1. 3. 4. 4. 4. 3. 3.\n",
-      " 1. 2. 1. 1. 4. 1. 1. 2. 4. 1. 1. 3. 3. 3. 2. 0. 1. 3. 2. 3. 4. 3. 3. 2.\n",
-      " 4. 2. 1. 4. 3. 3. 2. 1. 4. 2. 1. 4. 3. 2. 2. 1. 1. 4. 2. 1. 3. 1. 2. 3.\n",
-      " 2. 3. 3. 2. 3. 3. 4. 2. 2. 4. 4. 1. 3. 3. 4. 2. 3. 1. 4. 4. 1. 4. 3. 3.\n",
-      " 3. 2. 1. 2. 2. 4. 1. 4. 3. 4. 4. 3. 3. 1. 3. 3. 0. 1. 3. 3. 4. 1. 2. 0.\n",
-      " 1. 2. 0. 2. 4. 3. 3. 1. 1. 3. 2. 4. 4. 2. 4. 3. 2. 3. 1. 3. 2. 1. 3. 1.\n",
-      " 2. 1. 1. 0. 3. 1. 3. 4. 4. 2. 3. 4. 2. 3. 3. 4. 2. 1. 2. 1. 2. 1. 0. 2.\n",
-      " 2. 4. 3. 3. 2. 1. 2. 1. 4. 2. 3. 2. 1. 1. 2. 4. 3. 3. 2. 3. 3. 4. 2. 4.\n",
-      " 0. 2. 3. 3. 4. 1. 2. 2. 0. 3. 3. 1. 3. 4. 1. 3. 2. 3. 3. 2. 3. 3. 4. 4.\n",
-      " 4. 2. 4. 4. 3. 3. 2. 4. 2. 4. 1. 4. 2. 4. 1. 3. 2. 2. 3. 2. 2. 3. 3. 3.\n",
-      " 1. 3. 1. 3. 3. 3. 3. 2. 1. 1. 4. 1. 3. 2. 1. 0. 4. 4. 2. 1. 4. 1. 4. 2.\n",
-      " 4. 3. 2. 4. 3. 2. 3. 3. 3. 4. 3. 0. 1. 3. 3. 1. 1. 1. 0. 4. 2. 3. 1. 4.\n",
-      " 2. 1. 4. 1. 4. 4. 3. 4. 2. 2. 2. 2. 2. 2. 3. 3. 3. 3. 0. 1. 3. 4. 4. 3.\n",
-      " 3. 3. 1. 1. 1. 1. 2. 3. 3. 4. 2. 3. 1. 3. 3. 2. 1. 3. 2. 0. 3. 0. 3. 2.\n",
-      " 4. 3. 1. 1. 1. 1. 2. 4. 2. 4. 3. 3. 2.]\n",
+      "[2. 2. 3. 3. 2. 4. 4. 0. 0. 1. 4. 1. 0. 3. 1. 1. 3. 2. 3. 3. 3. 3. 2. 4.\n",
+      " 3. 3. 2. 0. 1. 3. 1. 4. 0. 2. 3. 3. 3. 3. 4. 2. 1. 3. 2. 3. 1. 3. 2. 4.\n",
+      " 2. 3. 3. 2. 3. 3. 0. 0. 4. 1. 3. 3. 1. 3. 2. 2. 1. 4. 3. 2. 0. 3. 2. 4.\n",
+      " 3. 1. 1. 0. 0. 3. 1. 0. 1. 2. 3. 3. 0. 1. 2. 0. 1. 2. 2. 3. 2. 2. 3. 0.\n",
+      " 2. 1. 4. 3. 0. 2. 2. 0. 3. 0. 2. 0. 0. 2. 1. 2. 4. 4. 4. 1. 2. 2. 2. 2.\n",
+      " 3. 1. 0. 3. 3. 0. 2. 1. 3. 2. 0. 0. 4. 1. 1. 3. 0. 1. 3. 4. 3. 4. 0. 0.\n",
+      " 2. 1. 3. 2. 4. 4. 0. 0. 0. 4. 0. 2. 1. 1. 3. 3. 4. 0. 1. 2. 0. 0. 1. 1.\n",
+      " 4. 4. 0. 1. 0. 2. 3. 3. 1. 2. 3. 2. 0. 4. 3. 1. 0. 0. 3. 3. 2. 3. 0. 4.\n",
+      " 4. 1. 0. 4. 3. 2. 0. 3. 4. 3. 2. 0. 2. 0. 0. 0. 1. 2. 0. 4. 2. 4. 1. 1.\n",
+      " 0. 1. 3. 1. 3. 1. 0. 0. 0. 0. 3. 3. 3. 4. 2. 2. 1. 0. 4. 4. 0. 2. 2. 0.\n",
+      " 4. 3. 3. 3. 1. 3. 2. 3. 2. 1. 4. 0. 1. 0. 1. 3. 4. 3. 1. 4. 3. 3. 1. 3.\n",
+      " 1. 3. 0. 4. 0. 4. 4. 2. 3. 0. 4. 4. 2. 4. 3. 2. 1. 2. 3. 4. 2. 0. 3. 3.\n",
+      " 1. 0. 4. 2. 3. 2. 4. 4. 1. 0. 0. 2. 1. 3. 4. 0. 1. 2. 0. 0. 1. 4. 0. 3.\n",
+      " 2. 4. 3. 0. 1. 0. 1. 0. 3. 3. 0. 2. 0. 2. 0. 4. 4. 1. 2. 3. 1. 1. 4. 0.\n",
+      " 2. 1. 3. 2. 0. 0. 2. 1. 0. 0. 3. 2. 2. 3. 0. 3. 2. 1. 1. 4. 3. 3. 3. 3.\n",
+      " 0. 4. 4. 2. 0. 3. 4. 4. 0. 3. 0. 1. 0. 0. 0. 4. 0. 4. 1. 3. 3. 0. 2. 1.\n",
+      " 1. 0. 1. 0. 2. 2. 0. 2. 4. 1. 1. 0. 1. 0. 4. 1. 4. 4. 1. 4. 2. 2. 1. 0.\n",
+      " 4. 2. 2. 4. 2. 2. 0. 1. 0. 3. 3. 4. 0. 0. 0. 0. 3. 4. 1. 2. 2. 3. 4. 1.\n",
+      " 2. 2. 0. 0. 4. 2. 3. 3. 0. 3. 4. 0. 1.]\n",
       "[3 2 2 ... 2 3 1]\n"
      ]
     }
    ],
-   "source": [
-    "print(X_test_predictions)\n",
-    "print(y_train)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
